feat: Read a DFA feat: Check if a sequence is accepted by the DFA chore: Add DFA files for identifier and integer chore: Modify the LexicalAnalyzer to detect tokens using the FiniteAutomataRunner

--- a/lab2/lab2/lab2.csproj
+++ b/lab2/lab2/lab2.csproj
@@ -6,6 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="fa1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="faIdentifier.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="faInteger.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="program1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
