--- a/lab2/lab2/lab2.csproj
+++ b/lab2/lab2/lab2.csproj
@@ -15,6 +15,9 @@
     <None Update="faInteger.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="lr01.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="program1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
